@@ -22,6 +22,20 @@ Compiling
                      # the samples in the samples folder should be able
                      # to run before installation.
 
+Windows
+-------
+
+cairo-X.Y.Z-x86-mswin32.gem includes cairo related binaries.
+
+  * cairo related binaries:
+      http://ftp.gnome.org/pub/gnome/binaries/win32/dependencies/
+
+      * cairo-X.Y.Z.zip
+      * cairo-dev-X.Y.Z.zip
+      * libpng-X.Y.Z.zip
+      * libpng-dev-X.Y.Z.zip
+      * zlib-X.Y.Z.zip
+
 Documents
 ---------
 
