@@ -1,5 +1,9 @@
 2008-04-24  Kouhei Sutou  <kou@cozmixng.org>
 
+	* Rakefile, src/lib/cairo.rb: support gem for mswin32.
+
+	* README (Windows): add.
+
 	* Rakefile: don't require 'cairo' if needless.
 
 	* pkg-config.rb (PackageConfig#guess_default_path): ignore
